# test-r

./: 404.html  AGENTS.md  CHANGELOG.md  CNAME  Cargo.toml  NOTES.md  README.md  advanced_features.html  core_features.html  deny.toml  getting_started.html  how_to.html  index.html  print.html  release-plz.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0fa54e21.js  searchindex-109e5fe0.js  searchindex-2679f66c.js  searchindex-4589b218.js  searchindex-53e40e3b.js  searchindex-6d3d8e86.js  searchindex-7337a8b6.js  searchindex-b8477f72.js  searchindex-d7c6e71b.js  searchindex-e598e960.js  searchindex.js  searchindex.json  toc-16c0bd11.js  toc-9098e925.js  toc-f3b155d5.js  toc.html  toc.js
.github/workflows/: ci.yml  release-plz.yml
advanced_features/: benches.html  dependency_injection.html  dependency_sharing.html  detached_panic_detection.html  dynamic_test_generation.html  flaky_tests.html  per_test_configuration.html  tags.html
book/: book.toml
book/src/: SUMMARY.md  advanced_features.md  core_features.md  getting_started.md  how_to.md
book/src/advanced_features/: benches.md  dependency_injection.md  dependency_sharing.md  detached_panic_detection.md  dynamic_test_generation.md  flaky_tests.md  per_test_configuration.md  tags.md
book/src/core_features/: defining_tests.md  running_tests.md  test_output.md
book/src/how_to/: golden_tests.md  property_based_testing.md  run_tests_on_github_actions.md  tracing.md
cargo-test-r/: CHANGELOG.md  Cargo.toml
cargo-test-r/src/: main.rs
core_features/: defining_tests.html  running_tests.html  test_output.html
example/: Cargo.toml
example-tokio/: Cargo.toml
example-tokio/src/: lib.rs
example-tokio/src/sharing/: cloneable_basic.rs  cloneable_no_double_init.rs  hosted_async_worker.rs  hosted_async_worker_rpc_legacy.rs  hosted_basic.rs  hosted_both_async_ctor.rs  hosted_both_async_ctor_stub_only.rs  hosted_both_async_descriptor.rs  hosted_both_async_trait.rs  hosted_both_basic.rs  hosted_both_parent_consumer.rs  hosted_rpc_basic.rs  hosted_rpc_macro.rs  hosted_rpc_macro_async.rs  mod.rs  per_worker_basic.rs
example-tokio/tests/: tests.rs
example/src/: lib.rs  main.rs  other.rs
example/src/sharing/: cloneable_basic.rs  host_capture_demo.rs  hosted_basic.rs  hosted_both_basic.rs  hosted_both_parent_consumer.rs  hosted_rpc_basic.rs  hosted_rpc_macro.rs  mod.rs  per_worker_basic.rs  per_worker_index.rs
example/tests/: tests.rs
github/: Cargo.toml
github/src/: internal.rs  main.rs
how_to/: golden_tests.html  property_based_testing.html  run_tests_on_github_actions.html  tracing.html
test-r/: CHANGELOG.md  Cargo.toml
test-r-core/: CHANGELOG.md  Cargo.toml
test-r-core/src/: args.rs  bench.rs  execution.rs  host_capture.rs  internal.rs  ipc.rs  lib.rs  panic_hook.rs  spawn.rs  stats.rs  sync.rs  tokio.rs  worker.rs
test-r-core/src/execution/: mod.rs  tests.rs
test-r-core/src/output/: ctrf.rs  ipc.rs  json.rs  junit.rs  mod.rs  pretty.rs  progress.rs  term_progress.rs  terse.rs
test-r-macro/: Cargo.toml
test-r-macro/src/: deps.rs  dynamic.rs  helpers.rs  hosted_rpc.rs  lib.rs  suite.rs  test.rs
test-r-macros/: CHANGELOG.md  Cargo.toml
test-r-macros/src/: lib.rs
test-r/src/: lib.rs
test-r/tests/: tests.rs
