[package]
name = "cargo-test-r"
version = "2.2.4"
edition = "2024"
license = "Apache-2.0"
description = "Test framework for Rust - cargo extensions"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[dependencies]
anyhow = "1.0.102"
camino = "1.2.2"
clap = { version = "4.5", features = ["derive"] }
fs_extra = "1.3.0"
humansize = "2.1.3"
glob-match = "0.2.1"
nextest-metadata = "0.13.3"
serde_json = "1.0.149"
tar = "0.4.44"
workspace_root = "0.2.0"
zstd = "0.13.3"
