[package]
name = "test-r-example-tokio"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "test-r-example-tokio-bin"
path = "src/main.rs"

[lib]
harness = false

[[test]]
name = "tests"
harness = false

[dependencies]
test-r = { version = "0.0.6", path = "../test-r" }

rand = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
