[package]
name = "test-r-example"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "test-r-example-bin"
path = "src/main.rs"

[lib]
harness = false

[[test]]
name = "tests"
harness = false

[dependencies]
test-r = { version = "0.0.5", path = "../test-r", default-features = false }

rand = "0.8"
