[package]
name = "test-r-core"
version = "4.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Test framework for Rust (core module)"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[lib]

[dependencies]
anstream = "0.6"
anstyle = "1"
anstyle-query = "=1.1.1"
anstyle-wincon = "=3.0.4"
bincode = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
escape8259 = "0.5"
futures = "0.3"
interprocess = "2.2"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
quick-xml = "0.38"
rand = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-std"], optional = true }
topological-sort = "0.2"
uuid = { version = "1.17", features = ["v4"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "interprocess/tokio"]
