[package]
name = "test-r-core"
version = "10.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Test framework for Rust (core module)"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[lib]

[dependencies]
anyhow = { version = "1", optional = true }
anstream = "0.6"
anstyle = "1"
anstyle-query = "=1.1.1"
anstyle-wincon = "=3.0.4"
desert_rust = "0.1.7"
clap = { version = "4.5", features = ["derive"] }
ctrf-rs = "0.1.0"
escape8259 = "0.5"
futures = "0.3"
interprocess = "2.4"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
quick-xml = "0.38"
rand = "0.10"
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-std"], optional = true }
topological-sort = "0.2"
uuid = { version = "1.21", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"

[features]
default = ["tokio", "anyhow"]
tokio = ["dep:tokio", "interprocess/tokio"]
anyhow = ["dep:anyhow"]
