[package]
name = "test-r-macro"
edition = "2024"
version = "1.2.2"
license = "Apache-2.0"
description = "Test framework for Rust (macros)"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
test-r-core = { version = "2.1.0", path = "../test-r-core" }

darling = "0.20.11"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
syn = { version = "2", features = ["full"] }
