[package]
name = "test-r-macro"
edition = "2024"
version = "1.3.2"
license = "Apache-2.0"
description = "Test framework for Rust (macros)"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
test-r-core = { version = "4.0.1", path = "../test-r-core" }

darling = "0.21.0"
humantime = "2.2.0"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
syn = { version = "2", features = ["full"] }
