[package]
name = "test-r-macro"
version = "1.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Test framework for Rust (macros)"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
test-r-core = { version = "1.0.2", path = "../test-r-core" }

heck = "0.5"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
syn = { version = "2", features = ["full"] }
