[package]
name = "test-r"
version = "1.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Test framework for Rust"
homepage = "https://github.com/vigoo/test-r"
repository = "https://github.com/vigoo/test-r"
readme = "../README.md"

[dependencies]
test-r-core = { version = "1.0.2", path = "../test-r-core", default-features = false }
test-r-macro = { version = "1.0.3", path = "../test-r-macros" }

ctor = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "test-r-core/tokio"]
